src/App.scss
html,
body,
#root {
	height: 100%;
	overflow: hidden;
}

#root {
	display: flex;
}

.fullHeight {
	height: 100%;
}

.fullWidth {
	width: 100%;
}

.PageWrapper {
}

.PageInner {
	height: 100%;
	width: 100%;
	padding: 1em;
}

.HomePage {
	display: flex;
	align-items: center;
	justify-content: space-around;
}

